# franken_numpy

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENNUMPY_V1.md  Cargo.toml  DESTRUCTIVE_OPS_LOG.md  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_NUMPY_STRUCTURE.md  FEATURE_PARITY.md  PHASE2C_EXTRACTION_PACKET.md  PLAN_TO_PORT_NUMPY_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  TODO_GRANULAR_EXECUTION.md  UPGRADE_LOG.md  get_true_numpy_values.py  patch_conformance.py  patch_continuous.py  patch_remaining.py  update_conformance.py  update_exact.py
.github/workflows/: ci.yml
artifacts/baselines/: BASELINE_PLAN.md  ufunc_benchmark_baseline.json  (+1 more)
crates/fnp-conformance/: Cargo.toml
crates/fnp-conformance/fixtures/: README.md  datetime_differential_cases.json  dtype_promotion_cases.json  io_adversarial_cases.json  io_differential_cases.json  io_metamorphic_cases.json  iter_adversarial_cases.json  linalg_adversarial_cases.json  linalg_differential_cases.json  linalg_metamorphic_cases.json  polynomial_differential_cases.json  rng_adversarial_cases.json  rng_differential_cases.json  runtime_policy_adversarial_cases.json  runtime_policy_cases.json  shape_stride_cases.json  smoke_case.json  string_differential_cases.json  ufunc_adversarial_cases.json  ufunc_input_cases.json  ufunc_metamorphic_cases.json  workflow_scenario_corpus.json
crates/fnp-conformance/fixtures/oracle_outputs/: README.md  datetime_differential_report.json  rng_differential_report.json  shape_stride_differential_report.json  ufunc_differential_mismatch_report.json  ufunc_differential_report.json  ufunc_oracle_output.json
crates/fnp-conformance/fixtures/packet002_dtype/: dtype_adversarial_cases.json  dtype_differential_cases.json  dtype_metamorphic_cases.json
crates/fnp-conformance/fixtures/packet002_dtype/oracle_outputs/: dtype_differential_report.json
crates/fnp-conformance/src/: benchmark.rs  lib.rs  raptorq_artifacts.rs  test_contracts.rs  ufunc_differential.rs  workflow_scenarios.rs
crates/fnp-conformance/tests/: smoke.rs
crates/fnp-runtime/: Cargo.toml
crates/fnp-runtime/src/: lib.rs
(+205 files in other folders)
