[package]
name = "fnp-conformance"
version = "0.1.0"
edition = "2024"

[dependencies]
fnp-dtype = { path = "../fnp-dtype", version = "0.1.0" }
fnp-ndarray = { path = "../fnp-ndarray", version = "0.1.0" }
fnp-runtime = { path = "../fnp-runtime", version = "0.1.0" }
fnp-ufunc = { path = "../fnp-ufunc", version = "0.1.0" }
asupersync = { version = "0.1.1" }
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
