[package]
name = "fnp-conformance"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
fnp-dtype = { path = "../fnp-dtype", version = "0.1.0" }
fnp-io = { path = "../fnp-io", version = "0.1.0" }
fnp-iter = { path = "../fnp-iter", version = "0.1.0" }
fnp-linalg = { path = "../fnp-linalg", version = "0.1.0" }
fnp-ndarray = { path = "../fnp-ndarray", version = "0.1.0" }
fnp-random = { path = "../fnp-random", version = "0.1.0" }
fnp-runtime = { path = "../fnp-runtime", version = "0.1.0" }
fnp-ufunc = { path = "../fnp-ufunc", version = "0.1.0" }
asupersync = { version = "0.2.0" }
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
