[package]
name = "fnp-runtime"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[features]
default = []
asupersync = ["dep:asupersync"]
frankentui = ["dep:ftui"]

[dependencies]
asupersync = { version = "0.2.0", default-features = false, optional = true }
ftui = { version = "0.2.0", default-features = false, optional = true }
